--- a/SyncUp/src/main/resources/fxml/admin/AdminPanel.fxml
+++ b/SyncUp/src/main/resources/fxml/admin/AdminPanel.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-           fx:controller="co.edu.uniquindio.syncup.view.controllers.AdminPanelViewController"
-           style="-fx-background-color: #121212;">
-    
+            fx:controller="co.edu.uniquindio.syncup.view.controllers.AdminPanelViewController"
+            style="-fx-background-color: #121212;">
+
     <top>
         <VBox style="-fx-background-color: #000000; -fx-padding: 20;">
             <Label text="Panel de Administración" style="-fx-text-fill: #1DB954; -fx-font-weight: bold;">
@@ -15,27 +15,29 @@
             </Label>
         </VBox>
     </top>
-    
+
     <center>
         <TabPane tabClosingPolicy="UNAVAILABLE">
             <Tab text="Gestión de Canciones">
                 <VBox spacing="15.0">
                     <padding><Insets top="20" right="20" bottom="20" left="20"/></padding>
-                    
+
                     <HBox spacing="10.0">
-                        <TextField fx:id="idField" promptText="ID" prefWidth="80"/>
+                        <TextField fx:id="idField" promptText="ID" prefWidth="80" editable="false"/>
                         <TextField fx:id="tituloField" promptText="Título" prefWidth="200"/>
                         <TextField fx:id="artistaField" promptText="Artista" prefWidth="150"/>
                         <TextField fx:id="generoField" promptText="Género" prefWidth="100"/>
                         <TextField fx:id="añoField" promptText="Año" prefWidth="80"/>
                         <TextField fx:id="duracionField" promptText="Duración" prefWidth="80"/>
                     </HBox>
-                    
+
                     <HBox spacing="10.0">
                         <Button text="Agregar" onAction="#agregarCancion" style="-fx-background-color: #1DB954; -fx-text-fill: #FFFFFF;"/>
+                        <Button text="Actualizar" onAction="#actualizarCancion" style="-fx-background-color: #FFA500; -fx-text-fill: #FFFFFF;"/>
                         <Button text="Eliminar Seleccionada" onAction="#eliminarCancion" style="-fx-background-color: #FF4444; -fx-text-fill: #FFFFFF;"/>
+                        <Button text="Limpiar Campos" onAction="#limpiarCampos" style="-fx-background-color: #555555; -fx-text-fill: #FFFFFF;"/>
                     </HBox>
-                    
+
                     <TableView fx:id="cancionesTable" VBox.vgrow="ALWAYS">
                         <columns>
                             <TableColumn fx:id="idColumn" text="ID" prefWidth="60"/>
@@ -45,13 +47,13 @@
                     </TableView>
                 </VBox>
             </Tab>
-            
+
             <Tab text="Gestión de Usuarios">
                 <VBox spacing="15.0">
                     <padding><Insets top="20" right="20" bottom="20" left="20"/></padding>
-                    
+
                     <Button text="Eliminar Usuario Seleccionado" onAction="#eliminarUsuario" style="-fx-background-color: #FF4444; -fx-text-fill: #FFFFFF;"/>
-                    
+
                     <TableView fx:id="usuariosTable" VBox.vgrow="ALWAYS">
                         <columns>
                             <TableColumn fx:id="usernameColumn" text="Username" prefWidth="200"/>
@@ -62,5 +64,5 @@
             </Tab>
         </TabPane>
     </center>
-    
+
 </BorderPane>
